--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,13 @@ HOST=localhost
 XIBO_CMS_SERVER_PROTOCOL=http
 XIBO_CMS_DOMAIN=xibo.example.org
 XIBO_CMS_SERVER_PORT=80
-XIBO_CMS_ROOT_ROUTE=/
+XIBO_CMS_ROOT_ROUTE=
 
-CLIENT_ID=some
-CLIENT_SECRET=SOME
+XIBO_CLIENT_ID=some
+XIBO_CLIENT_SECRET=SOME
+
+POSTGRES_HOST=
+POSTGRES_PORT=
+POSTGRES_DATABASE=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
